fix script src issue

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@ ul{
     <button @click="tri('square')">四色方块</button>
   </div>
 </div>
-<script src="js/vue-v1.0.11.js">
-</script>   
+<script src="http://vuejs.org/js/vue.min.js"></script>   
 <script>
 var triangle = {
   normal:{
