--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </a>
 <!-- /fork me on github -->
 
-<script src="http://vuejs.org/js/vue.min.js"></script>   
+<script src="https://cdn.jsdelivr.net/npm/vue@1.0.28/dist/vue.min.js"></script>   
 <script src="main.js"></script>   
 </body>
 </html>
